force-app/main/default/objects/SP_Event__c/SP_Event__c.object-meta.xml
<CustomObject>
    <label>SP Event</label>
    <nameField>
        <label>SP Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SP Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>