force-app/main/default/objects/SP_Event__c/fields/Previous_Event__c.field-meta.xml
<CustomField>
    <fullName>Previous_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Event</label>
    <referenceTo>SP_Event__c</referenceTo>
    <relationshipLabel>SP Events</relationshipLabel>
    <relationshipName>SP_Events</relationshipName>
    <type>Lookup</type>
</CustomField>