force-app/main/default/objects/SP_Event__c/fields/Second_Parent_Resource__c.field-meta.xml
<CustomField>
    <fullName>Second_Parent_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Parent Resource</label>
    <referenceTo>SP_Resource__c</referenceTo>
    <relationshipLabel>SP Events (Second Parent Resource)</relationshipLabel>
    <relationshipName>SP_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>