force-app/main/default/objects/SP_Event__c/fields/Style__c.field-meta.xml
<CustomField>
    <fullName>Style__c</fullName>
    <label>Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plain</fullName>
            </value>
            <value>
                <fullName>Border</fullName>
            </value>
            <value>
                <fullName>Colored</fullName>
            </value>
            <value>
                <fullName>Hollow</fullName>
            </value>
            <value>
                <fullName>Line</fullName>
            </value>
            <value>
                <fullName>Dashed</fullName>
            </value>
            <value>
                <fullName>Minimal</fullName>
            </value>
            <value>
                <fullName>Rounded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>